--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<input type="text" class="form-control" id="downloads" >
 			</div>
 			<button id="new-information" type="submit" class=" btn-option btn btn-secondary">Reguistrar datos</button>
-			<button id="edit-information" type="submit" class=" btn-option btn btn-secondary">Editar</button>
-			<button id="dalate-information" type="submit" class=" btn-option btn btn-secondary">Eliminar</button>
+<!-- 			<button id="edit-information" type="submit" class=" btn-option btn btn-secondary">Editar</button>
+			<button id="dalate-information" type="submit" class=" btn-option btn btn-secondary">Eliminar</button> -->
 		</form>
   	</div>
   	<div class="contenedor-table">
-		<table class="table">
+		<table class="table" id="table">
 			<thead>
 				<tr>
 					<th>Juegos</th>
@@ -38,15 +38,6 @@
 		</table>
 		<button id="show-table" type="button" class=" btn-show btn btn-secondary">Mostrar listado de juegos</button>		
   	</div>
-
-
-
-
-
-
-
-
-
 
 
   	<script type="text/javascript" src="js/main.js"></script>
