Update delete elments

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 				<label for="formGroupExampleInput2">Descargas</label>
 				<input type="text" class="form-control" id="downloads" >
 			</div>
-			<button id="new-information" type="submit" class=" btn-option btn btn-secondary">Reguistrar datos</button>
-<!-- 			<button id="edit-information" type="submit" class=" btn-option btn btn-secondary">Editar</button>
-			<button id="dalate-information" type="submit" class=" btn-option btn btn-secondary">Eliminar</button> -->
+			<button id="new-information" type="submit" class=" btn-option btn btn-secondary" onclick="newGame()">Reguistrar datos</button>
 		</form>
   	</div>
   	<div class="contenedor-table">
@@ -36,7 +34,7 @@
 			<tbody id="games-table">
 			</tbody>
 		</table>
-		<button id="show-table" type="button" class=" btn-show btn btn-secondary">Mostrar listado de juegos</button>		
+		<button id="show-table" type="button" class=" btn-show btn btn-secondary" onclick="showTable()">Mostrar listado de juegos</button>		
   	</div>
 
 
