Pure java Script

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, world!</title>
+    <title>the best Games</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-  	<div class="container-div" >
-  		<h1>Registro de juegos</h1>
+			<h1>Registro de juegos</h1>
+  	<div class="container-div container" >
 		<form id="new-information" class="contenedor-form">
 			<div class="form-group">
 				<label for="formGroupExampleInput">Juego</label>
@@ -22,7 +22,7 @@
 			<button id="new-information" type="submit" class=" btn-option btn btn-secondary" onclick="newGame()">Reguistrar datos</button>
 		</form>
   	</div>
-  	<div class="contenedor-table">
+  	<div class="contenedor-table container">
 		<table class="table" id="table">
 			<thead>
 				<tr>
