--- a/index.html
+++ b/index.html
@@ -3,44 +3,62 @@
   <head>
     <title>the best Games</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-		<h1>Registro de juegos</h1>
-  	<div class="container-div container" >
-		<form id="new-information" class="contenedor-form">
-			<div class="form-group">
-				<label for="formGroupExampleInput">Juego</label>
-				<input type="text" class="form-control" id="game" >
+		<nav>
+			<div class="nav-wrapper amber lighten-2">
+				<a href="#" class="brand-logo">My single page</a>
+				<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li><a href="">Proyectos</a></li>
+					<li><a href="">Blog</a></li>
+					<li><a href="">JavaScript</a></li>
+				</ul>
 			</div>
-			<div class="form-group">
-				<label for="formGroupExampleInput2">Descargas</label>
-				<input type="text" class="form-control" id="downloads" >
+			<div class="nav-content">
+				<ul class="tabs tabs-transparent">
+					<li class="tab"><a class="active" href="#test1">REGISTRO DE JUEGOS</a></li>
+					<li class="tab"><a href="#test2">GENERAR PASSWORD ALEATORIA</a></li>
+				</ul>
 			</div>
-			<button id="new-information" type="submit" class=" btn-option btn btn-secondary" onclick="newGame()">Reguistrar datos</button>
-		</form>
-  	</div>
-  	<div class="contenedor-table container">
-		<table class="table" id="table">
-			<thead>
-				<tr>
-					<th>Juegos</th>
-					<th>Descargas</th>
-					<th>Opciones</th>
-				</tr>
-			</thead>
-			<tbody id="games-table">
-			</tbody>
-		</table>
-		<button id="show-table" type="button" class=" btn-show btn btn-secondary" onclick="showTable()">Mostrar listado de juegos</button>		
-  	</div>
+		</nav>
 
+		<h1 class="title-head">Registro de juegos</h1>
 
+		<div class="container-div container">
+			<form id="new-information" class="contenedor-form">
+				<div class="form-group">
+					<label for="formGroupExampleInput">Juego</label>
+					<input type="text" class="form-control" id="game" >
+				</div>
+				<div class="form-group">
+					<label for="formGroupExampleInput2">Descargas</label>
+					<input type="text" class="form-control" id="downloads" >
+				</div>
+				<button id="new-information" type="submit" class=" btn-option btn btn-secondary" onclick="newGame()">Guardar Reguistro</button>
+			</form>
+		</div>
+
+		<div class="contenedor-table container">
+			<table class="responsive-table" id="table">
+				<thead>
+					<tr>
+						<th>Juegos</th>
+						<th>Descargas</th>
+						<th>Opciones</th>
+					</tr>
+				</thead>
+				<tbody id="games-table">
+				</tbody>
+			</table>
+		</div>
   	<script type="text/javascript" src="js/main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
   </body>
 </html>
